--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,12 +5,21 @@
 <div class="text-center">
     <h1 class="display-4">Projeto de teste do OCR</h1>
 
-    <form asp-action="CarregarAnexo" enctype="multipart/form-data">
-        <input type="file" name="anexo" />
-        <button type="submit">Enviar</button>
+    <form asp-action="CarregarAnexo" enctype="multipart/form-data" id="formulario">
+        <input type="file" name="anexo" id="anexo" style="display:none;"/>
+        <a href="#" class="btn btn-primary" onclick="$('#anexo').click()">Carregar PDF</a>
+        @*<button type="submit" class="btn btn-success">Enviar</button>*@
     </form>
 
     <div class="mt-4">
         <textarea rows="10" cols="100">@TempData["text"]</textarea>
     </div>
 </div>
+
+@section Scripts{
+    <script>
+        $('#anexo').change(function(){
+            $("#formulario").submit()
+        })
+    </script>
+}
