changes in home/index

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Projeto de teste do OCR</h1>
+    <h1 class="display-4">Projeto de teste do OCR Syncfusion</h1>
 
     <form asp-action="CarregarAnexo" enctype="multipart/form-data" id="formulario">
         <input type="file" name="anexo" id="anexo" style="display:none;"/>
